--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "telegram-feedback-mcp",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "基于 Telegram 的交互式反馈 MCP：让 AI 随时发问并等待用户回复（含图片）",
   "type": "module",
   "bin": {
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
-    "axios": "^1.13.2"
+    "axios": "^1.13.2",
+    "form-data": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
