--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "telegram-feedback-mcp",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "基于 Telegram 的交互式反馈 MCP：让 AI 随时发问并等待用户回复（含图片）",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Lynricsy/AgentChatMCP"
+  },
+  "homepage": "https://github.com/Lynricsy/AgentChatMCP#readme",
+  "bugs": {
+    "url": "https://github.com/Lynricsy/AgentChatMCP/issues"
+  },
   "bin": {
     "telegram-feedback-mcp": "./build/index.js"
   },
